public/css/tictactoe.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
body {
  font-family: 'Comfortaa', cursive;
  background-color: #F0CFD7;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#boardContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 50px;
  background: #D3B2DA;
  padding: 20px;
  border-radius: 1rem;
  border: 3px solid #4e4e4e;
  height: 600px;
}

h1 {
  text-align: center;
}

#board {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 10px;
  width: auto;
  margin-bottom: 10px;
}

.cell {
  width: 100px;
  height: 100px;
  border-radius: 10px;
  background-color: #e8e8e8;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 24px;
  cursor: pointer;
}

.cell.player {
  color: green;
  font-weight: 900;
}

.cell.comp {
  color: red;
  font-weight: 900;
}

button {
  font-size: 16px;
  padding: 5px 10px;
  width: 150px;
  height: 50px;
  border-radius: 20px;
  background-color: #8DD4CD;
  font-weight: 600;
  margin-bottom: 15px;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  border: none;
  padding: 0px 20px;
  color: white;
  cursor: pointer;
  border-radius: 10px;
  box-shadow: 5px 5px 0px #9de6e6b1;
  transition-duration: .3s;
}

svg {
  width: 30px;
  position: absolute;
  right: 0;
  margin-right: 20px;
  transition-duration: .3s;
}

button:hover {
  color: transparent;
}

button:hover svg {
  right: 43%;
  margin: 0;
  padding: 0;
  border: none;
  color: white;
  transition-duration: .3s;
}

button:active {
  transform: translate(3px , 3px);
  transition-duration: .3s;
  box-shadow: 2px 2px 0px #B2EEB1;
}

#finish {
  visibility: hidden;
}

h4 {
  margin-top: 10px;
  text-align: center;
}

.toggle-button-cover {
  display: table-cell;
  position: relative;
  width: 150px;
  height: 70px;
  box-sizing: border-box;
}

.button-cover {
  height: 100px;
  margin: 20px;
  background-color: #fff;
  box-shadow: 0 10px 20px -8px #abeebb;
  border-radius: 4px;
}

.button-cover:before {
  counter-increment: button-counter;
  content: counter(button-counter);
  position: absolute;
  right: 0;
  bottom: 0;
  color: #d7e3e3;
  font-size: 12px;
  line-height: 1;
  padding: 5px;
}

.button-cover,
.knobs,
.layer {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.button {
  position: relative;
  top: 50%;
  width: 82px;
  height: 46px;
  margin: -20px auto 0 auto;
  overflow: hidden;
}

.checkbox {
  position: relative;
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  opacity: 0;
  cursor: pointer;
  z-index: 3;
}

.knobs {
  z-index: 2;
}

.layer {
  width: 100%;
  background-color: #ebf7fc;
  transition: 0.3s ease all;
  z-index: 1;
}

.button.r,
.button.r .layer {
  border-radius: 100px;
}

#button-3 .knobs:before {
  content: "EASY";
  display: flex;
  justify-content: center;
  position: absolute;
  top: 4px;
  left: 4px;
  width: 35px;
  height: 35px;
  color: #fff;
  font-size: 10px;
  font-weight: bold;
  text-align: center;
  line-height: 1;
  padding: 13px 4px;
  background-color: #B2EEB1;
  border-radius: 50%;
  transition: 0.3s ease all, left 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15);
}

#button-3 .checkbox:active + .knobs:before {
  width: 46px;
  border-radius: 100px;
}

#button-3 .checkbox:checked:active + .knobs:before {
  margin-left: -26px;
}

#button-3 .checkbox:checked + .knobs:before {
  content: "HARD";
  left: 42px;
  background-color: #e48299;
}

#button-3 .checkbox:checked ~ .layer {
  background-color: #fcebeb;
}

.hidden {
  display: none;
}

#playAgain {
  font-size: small;
}

